--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,84 @@
-flask
-absl-py==0.8.0
+absl-py==0.9.0
 asn1crypto==0.24.0
-astor==0.8.0
+astor==0.8.1
 backcall==0.1.0
 beautifulsoup4==4.6.0
-boto3==1.9.241
-botocore==1.12.241
+boto3==1.10.44
+botocore==1.13.44
+cachetools==4.0.0
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
+Click==7.0
 conda==4.5.8
 conda-build==3.12.0
-cryptography==2.3
-Cython==0.29.13
+cryptography==2.2.2
+Cython==0.29.14
 decorator==4.3.0
 docutils==0.15.2
 filelock==3.0.4
+Flask==1.1.1
 gast==0.2.2
 glob2==0.6
-google-pasta==0.1.7
-grpcio==1.24.1
+google-auth==1.10.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+grpcio==1.26.0
 h5py==2.10.0
 idna==2.6
 ipython==6.4.0
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
 jedi==0.12.1
-Jinja2==2.10
+Jinja2==2.10.3
 jmespath==0.9.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.0
-mecab-python3==0.996.2
 mkl-fft==1.0.4
 mkl-random==1.0.1
-numpy==1.17.2
+numpy==1.18.0
+oauthlib==3.1.0
 olefile==0.45.1
 opt-einsum==3.1.0
-pandas==0.25.1
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
-Pillow==6.2.0
+Pillow==5.2.0
 pkginfo==1.4.2
 prompt-toolkit==1.0.15
-protobuf==3.9.2
+protobuf==3.11.2
 psutil==5.4.6
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
 pycosat==0.6.3
 pycparser==2.18
 Pygments==2.2.0
-pyknp==0.4.1
 pyOpenSSL==18.0.0
 PySocks==1.6.8
-python-dateutil==2.8.0
+python-dateutil==2.8.1
 pytorch-pretrained-bert==0.6.2
-pytz==2019.2
-PyYAML==5.1
-regex==2019.8.19
-requests==2.20.0
+PyYAML==3.13
+regex==2019.12.20
+requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
 ruamel-yaml==0.15.37
 s3transfer==0.2.1
 scipy==1.1.0
 simplegeneric==0.8.1
 six==1.11.0
-tensorboard==2.0.0
-tensorboardX==1.8
+tensorboard==2.0.2
 tensorflow==2.0.0
-tensorflow-estimator==2.0.0
+tensorflow-estimator==2.0.1
 termcolor==1.1.0
 torch==0.4.1
 torchvision==0.2.1
-tqdm==4.36.1
+tqdm==4.41.0
 traitlets==4.3.2
-urllib3==1.24.2
+urllib3==1.22
 wcwidth==0.1.7
 Werkzeug==0.16.0
 wrapt==1.11.2
