--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -36,6 +36,7 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.0
+mecab-python3==0.996.2
 mkl-fft==1.0.4
 mkl-random==1.0.1
 numpy==1.18.0
@@ -82,3 +83,4 @@ urllib3==1.22
 wcwidth==0.1.7
 Werkzeug==0.16.0
 wrapt==1.11.2
+uwsgi
